<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="@dimen/margine_sixteen"
        android:hint="@string/enter_number"
        android:importantForAutofill="no"
        android:padding="@dimen/padding_eight"
        android:background="@drawable/edit_text_border"
        android:inputType="number"
        android:layout_alignParentTop="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_one"
                style="@style/button_style"
                android:text="@string/button_one" />

            <Button
                android:id="@+id/btn_two"
                android:text="@string/button_two"
                style="@style/button_style" />

            <Button
                android:id="@+id/btn_three"
                android:text="@string/button_three"
                style="@style/button_style" />

            <Button
                android:id="@+id/btn_divide"
                android:text="@string/button_divide"
                android:layout_marginRight="@dimen/margine_right"
                android:layout_marginEnd="@dimen/margine_right"
                style="@style/button_style" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_four"
                android:text="@string/button_four"
                style="@style/button_style" />

            <Button
                android:id="@+id/btn_five"
                android:text="@string/button_five"
                style="@style/button_style" />

            <Button
                android:id="@+id/btn_six"
                android:text="@string/button_six"
                style="@style/button_style" />

            <Button
                android:id="@+id/btn_minus"
                android:text="@string/button_minus"
                android:layout_marginRight="@dimen/margine_right"
                android:layout_marginEnd="@dimen/margine_right"
                style="@style/button_style" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_seven"
                android:text="@string/button_seven"
                style="@style/button_style" />

            <Button
                android:id="@+id/btn_eight"
                android:text="@string/button_eight"
                style="@style/button_style" />

            <Button
                android:id="@+id/btn_nine"
                android:text="@string/button_nine"
                style="@style/button_style" />

            <Button
                android:id="@+id/btn_plus"
                android:text="@string/button_plus"
                android:layout_marginRight="@dimen/margine_right"
                android:layout_marginEnd="@dimen/margine_right"
                style="@style/button_style" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_clear"
                android:text="@string/button_clear"
                style="@style/button_style" />

            <Button
                android:id="@+id/btn_zero"
                android:text="@string/button_zero"
                style="@style/button_style" />

            <Button
                android:id="@+id/btn_dot"
                android:text="@string/button_dot"
                style="@style/button_style" />

            <Button
                android:id="@+id/btn_equal"
                android:text="@string/button_equal"
                android:layout_marginRight="@dimen/margine_right"
                android:layout_marginEnd="@dimen/margine_right"
                style="@style/button_style" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>